[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipline" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "127.0.0.1"
align = 1
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portline" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "4848"
align = 1
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seedline" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
text = "1234"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
text = "Seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedLabel2" type="Label" parent="."]
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 20.0
margin_top = 284.0
margin_right = 1004.0
margin_bottom = 315.0
text = "SIEDLER VON CATAN
CUSTOM"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
text = "Name: "

[node name="nameline" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="text_changed" from="nameline" to="." method="_on_nameline_text_changed"]
